--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,17 @@ python:
   - "3.6"
   - "3.7"
   - "3.3"
+env:
+  - DJANGO_VERSION=2.1.13
+  - DJANGO_VERSION=2.2.6
+
 install:
+  - pip install -q Django==$DJANGO_VERSION
+  - python setup.py -q install
   - pip install -r requirements.txt
   - pip install codacy-coverage
   - pip install flake8
+  - 
 script:
   - cd decide
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
