--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,10 @@ script:
   - coverage xml
   - python-codacy-coverage -r coverage.xml
   - flake8 .
+notifications:
+  email:
+    recipients:
+      - jesuselia71@gmail.com
+      - jeselirodr@alum.us.es
+    on_success: never # default: always
+    on_failure: always # default: always
