--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,16 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install codacy-coverage
-  - pip install flake8
+  
 script:
   - cd decide
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
-  - flake8 .
+  
 notifications:
   email:
     recipients:
       - jesuselia71@gmail.com
-      - jeselirodr@alum.us.es
-    on_success: never # default: always
+    on_success: always # default: always
     on_failure: always # default: always
