--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   
 script:
   - cd decide
-  - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
+  - coverage run --branch --source=. ./manage.py test census --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
   
@@ -29,7 +29,6 @@ notifications:
   email:
     recipients:
       - jesuselia71@gmail.com
-	
     on_success: always # default: always
     on_failure: always # default: always
 
