--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   
 script:
   - cd decide
-  - coverage run --branch --source=. ./manage.py test census --keepdb --with-xunit
+  - coverage run --branch --source=. ./manage.py test  --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
   
