--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - pip install -r requirements.txt
   - pip install codacy-coverage
   - pip install -q Django==$DJANGO_VERSION
+  - python setup.py -q install
 
   
 script:
